<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BookDetailActivity">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/coverImage"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:background="@drawable/default_book_image"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coverImage"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/author_name"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        style="@style/Divider.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/authorName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/publishedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/published_by"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/pageNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/publishedBy"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="@string/no_of_pages"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>